--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
             <div class="mb-16">
                 <h2 class="text-4xl font-medium mb-4 opacity-60">Client</h2>
                 <div class="flex items-center space-x-8 mb-8">
-                    <h2 class="text-8xl md:text-9xl font-black reveal-text">Testimonials</h2>
+                    <h2 class="text-6xl md:text-6xl font-black tracking-tighter reveal-text">Testimonials</h2>
                     <div class="text-6xl">→</div>
-                    <h2 class="text-8xl md:text-9xl font-black reveal-text">Works</h2>
+                    <h2 class="text-6xl md:text-6xl font-black reveal-text">Works</h2>
                 </div>
             </div>
             
