--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <img 
                     src="https://images.unsplash.com/photo-1739001416673-8c03d1a2d257?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
                     alt="Hero Image" 
-                    class="w-full h-[600px] object-cover parallax-element hover:scale-110 transition-transform duration-700"
+                    class="w-full h-[600px] object-cover object-[20%_20%] parallax-element hover:scale-110 transition-transform duration-700"
                 />
                 <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
             </div>
@@ -299,7 +299,7 @@
             <div class="mb-32">
                 <div class="sticky top-20 z-30 glass-morphism rounded-2xl p-8 mb-12">
                     <div class="flex items-center space-x-8">
-                        <h3 class="text-8xl font-light reveal-text">2017</h3>
+                        <h3 class="text-8xl font-light reveal-text">2024</h3>
                         <div class="w-32 h-px bg-gradient-to-r from-purple-500 to-blue-500"></div>
                         <h3 class="text-6xl font-light opacity-60">The Beginning</h3>
                     </div>
@@ -322,7 +322,7 @@
             <div class="mb-32">
                 <div class="sticky top-20 z-30 glass-morphism rounded-2xl p-8 mb-12">
                     <div class="flex items-center space-x-8">
-                        <h3 class="text-8xl font-light reveal-text">2018</h3>
+                        <h3 class="text-8xl font-light reveal-text">2025</h3>
                         <div class="w-32 h-px bg-gradient-to-r from-purple-500 to-blue-500"></div>
                         <h3 class="text-6xl font-light opacity-60">Escalation</h3>
                     </div>
@@ -556,4 +556,5 @@
         });
     </script>
 </body>
+
 </html>
